--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Dosis', Calibri, Arial, sans-serif;
   background-color: #315481;
   background-image: linear-gradient(to bottom, #315481, ghostwhite 100%);
   background-attachment: fixed;
@@ -45,20 +45,6 @@ h1 {
 
 
 
-@media (max-width: 600px) {
-  li {
-    padding: 12px 15px;
-  }
-
-  .search {
-    width: 150px;
-    clear: both;
-  }
-
-  .new-task input {
-    padding-bottom: 5px;
-  }
-}
 
 
 /*    TITLE SEQUENCE     */
@@ -68,7 +54,6 @@ h1 {
 
 
 h2.title {  
-  /*font-family: 'Dosis', Calibri, Arial, sans-serif;*/
   font-family: 'Dosis', 'Lato', sans-serif;
   font-size: 70px;
   font-weight: 200;
@@ -300,4 +285,10 @@ h2.title:first-child .word3,
 h2.title:nth-child(2) .word2,
 h2.title:nth-child(4) .word2 {
   font-weight: 600;
+}
+
+@media (max-width: 600px) {
+  h2.title{
+    font-size: 40px;
+  }
 }
